--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
