--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,12 +18,14 @@ pluginManagement {
 
     plugins {
         id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
+        id "org.jetbrains.kotlin.android" version "1.9.10" apply false // Added Kotlin plugin
     }
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "7.3.0" apply false
+    id "org.jetbrains.kotlin.android" apply false // Applied Kotlin plugin
 }
 
 include ":app"
