--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   firebase_core: ^3.8.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
